# cqm

./: CMakeLists.txt  Makefile  README.md  main.c  msvc-build.bat
include/: calendar.h  comline.h  qimenbasic.h  qimenyp.h  qimenzpzr.h
src/: calendar.c  comline.c  data.c  qimen.c  qimenbasic.c  qimenyp.c  qimenzpzr.c
